# ai-tech-agent

./: .gitignore  main.py  pyproject.toml  requirements.txt
agent/: brain.py  config.py  export.py  graph.py  ingest.py  library.py  memory.py  research.py  ui.py  voice.py
agent/sources/: __init__.py
data/: memory.db
